Add start instance api
